# bayan

./: CMakeLists.txt  Doxyfile  index.html  main.cpp
.github/workflows/: Release.yml  doxygen.yml
src/: main.cpp
src/includes/: compareFile.hpp  crc.hpp  parser.hpp  sortingData.hpp
src/models/: compareFile.cpp  crc.cpp  parser.cpp  sortingData.cpp
